# volkrix

./: Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  build.rs
.github/workflows/: ci.yml  release.yml
benches/: README.md
docs/: architecture.md  nnue-training.md  perft.md  roadmap.md  search-handoff.md  search.md
scripts/: dev.py
src/: lib.rs  main.rs  nnue_training.rs
src/core/: attacks.rs  chess_move.rs  fen.rs  magics.rs  mod.rs  movelist.rs  perft.rs  piece.rs  position.rs  repetition.rs  see.rs  square.rs  types.rs  zobrist.rs
src/search/: bench.rs  eval.rs  internal.rs  limits.rs  mod.rs  movepicker.rs  nnue.rs  qsearch.rs  root.rs  service.rs  tablebase.rs  tt.rs
src/uci/: mod.rs
src/util/: mod.rs
tests/: core_types.rs  eval.rs  fen.rs  movegen.rs  perft.rs  position.rs  rules.rs  search.rs  see.rs  tt.rs  uci.rs  zobrist.rs
tests/data/nnue/: README.md  phase13-fixture.fens
tests/fixtures/divide/: kiwipete_d3.txt  startpos_d3.txt
tools/nnue/: train_halfkp128x2.py
tools/volkrix-nnue/: Cargo.toml
tools/volkrix-nnue/src/: bullet_trainer.rs  engine_match.rs  main.rs
