[workspace]
members = [".", "tools/volkrix-nnue"]

[package]
name = "volkrix"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
description = "Volkrix, a clean-room Rust UCI chess engine."
repository = "https://github.com/example/volkrix"
readme = "README.md"

[features]
internal-testing = []
offline-tools = ["dep:serde", "dep:serde_json"]

[dependencies]
serde = { version = "1.0", features = ["derive"], optional = true }
serde_json = { version = "1.0", optional = true }

[build-dependencies]
cc = "1.1"
