[package]
name = "volkrix-nnue"
version = "0.1.0"
edition = "2024"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
acyclib = { git = "https://github.com/jw1912/bullet", rev = "feab6443fc523c9d349427bca2d5bb3c04369420", package = "acyclib" }
bullet_lib = { git = "https://github.com/jw1912/bullet", rev = "feab6443fc523c9d349427bca2d5bb3c04369420", package = "bullet_lib", default-features = false, features = ["cpu"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
volkrix = { path = "../..", features = ["offline-tools"] }
